Made the question starter scrolling work with CSS animations instead of jQuery to prevent the slow 'jumping' effect from earlier. Haven't tested it yet. Also prevented the question starter from going beyond 0 and 7, when using keyboard as interface.

--- a/server_websocket/public/styles/scss/_state2.scss
+++ b/server_websocket/public/styles/scss/_state2.scss
@@ -29,6 +29,8 @@
   #question-starter-rotator {
     position: relative;
     transform: translateY(25px);
+    transition: top 400ms ease-in-out;
+    top: 0;
 
     span {
       width: 100%;
